Minor changes in footer.

--- a/styles/style.css
+++ b/styles/style.css
@@ -4044,12 +4044,14 @@ body.light-skin.fixed-footer .footer {
 
 .footermenu {
     padding-bottom: 10px;
+    font-size: 14px;
     color: #6a6c6f;
     border-bottom: 1px solid #eaeaea
 }
 
 .footermenu-last {
     padding-bottom: 10px;
+    font-size: 14px;
     color: #6a6c6f
 }
 
