Structure and coloring done. Needs content.

--- a/styles/style.css
+++ b/styles/style.css
@@ -4051,6 +4051,10 @@ body.light-skin.fixed-footer .footer {
     padding-bottom: 20px
 }
 
+.agb {
+    margin-top: 3%
+}
+
 .footermenu {
     padding-bottom: 10px;
     font-size: 14px;
