--- a/styles/style.css
+++ b/styles/style.css
@@ -3174,8 +3174,7 @@ body.modal-open {
     background: #ffffff
 }
 #side-menu li a {
-    color: #6a6c6f;
-    padding: 50px 20px
+    color: #F7931D
 }
 #side-menu li {
     border-bottom: 1px solid #eaeaea
