--- a/styles/style.css
+++ b/styles/style.css
@@ -2825,20 +2825,23 @@ body.blank {
 .space-30 {
     margin: 30px 0
 }
-html {
-    margin: 0;
+
+html, body {
     padding: 0;
-    height: 100%;
-    overflow-x: hidden!important
+    width:100% !important;
+    height:100% !important;
+    top:0px !important;
+    left:0px !important;
+    right:0px !important;
+    bottom:0px !important;
+    position: fixed !important;
 }
+
 body {
     font-family: 'Montserrat', sans-serif;
     background-color: #fff;
     font-size: 13px;
     color: #6a6c6f;
-    margin: 0;
-    padding: 0;
-    height: 100%
 }
 #header {
     background-color: #fff;
@@ -2865,14 +2868,15 @@ body {
     border-left: 1px solid #eaeaea;
     transition: margin .4s ease 0s;
     position: relative;
-    min-height: 100%
+    height: 100%
 }
+
+.mapcontainer, .mapcontainer > div, .mapcontainer > div #map-canvas {
+    height: inherit;
+}
+
 .content {
-    position: sticky;
-    top: 85px;
-    min-height: 100% !important;
-    overflow-y: hidden;
-    min-width: 100%
+    height: 100%
 }
 .footer {
     padding: 10px 18px;
