--- a/styles/style.css
+++ b/styles/style.css
@@ -2828,12 +2828,9 @@ body.blank {
 
 html, body {
     padding: 0;
-    width:100% !important;
-    height:100% !important;
-    top:0px !important;
-    left:0px !important;
-    right:0px !important;
-    bottom:0px !important;
+    margin: 0;
+    width: 100% !important;
+    height: 100% !important;
     position: fixed !important;
 }
 
@@ -2843,6 +2840,7 @@ body {
     font-size: 13px;
     color: #6a6c6f;
 }
+
 #header {
     background-color: #fff;
     display: block;
@@ -2852,6 +2850,7 @@ body {
     position: relative;
     border-bottom: 1px solid #eaeaea
 }
+
 #menu {
     width: 380px;
     bottom: 0;
@@ -2861,6 +2860,7 @@ body {
     top: 85px;
     transition: margin .4s ease 0s
 }
+
 #wrapper {
     margin: 0 0 0 380px;
     padding: 0;
@@ -2878,6 +2878,16 @@ body {
 .content {
     height: 100%
 }
+
+.content div {
+    position:relative;
+    top: 0;
+}
+
+li.garage:hover {
+  background: #f7f9fa;
+}
+
 .footer {
     padding: 10px 18px;
     background: #fff;
@@ -3277,13 +3287,13 @@ body.modal-open {
     border-right: 1px solid #eaeaea
 }
 body.hide-sidebar #menu {
-    margin-left: -180px
+    margin-left: 380px
 }
 body.hide-sidebar #wrapper {
-    margin-left: 0
+    margin-left: 380px
 }
 body.page-small #menu {
-    margin-left: -180px
+    margin-left: 380px
 }
 body.page-small #wrapper {
     margin-left: 0
@@ -3292,7 +3302,7 @@ body.page-small.show-sidebar #menu {
     margin-left: 0
 }
 body.page-small.show-sidebar #wrapper {
-    margin-left: 180px
+    margin-left: 380px
 }
 a {
     cursor: pointer;
