--- a/styles/style.css
+++ b/styles/style.css
@@ -2946,8 +2946,7 @@ li.garage:hover {
     position: fixed;
     z-index: 1001;
     bottom: 0;
-    left: 380px;
-    border-left: 1px solid #eaeaea;
+    left: 181px;
     right: 0
 }
 .fixed-footer.hide-sidebar .footer {
@@ -3297,13 +3296,13 @@ body.modal-open {
     border-right: 1px solid #eaeaea
 }
 body.hide-sidebar #menu {
-    margin-left: 380px
+    margin-left: -180px
 }
 body.hide-sidebar #wrapper {
-    margin-left: 380px
+    margin-left: 0
 }
 body.page-small #menu {
-    margin-left: 380px
+    margin-left: -180px
 }
 body.page-small #wrapper {
     margin-left: 0
@@ -3312,7 +3311,7 @@ body.page-small.show-sidebar #menu {
     margin-left: 0
 }
 body.page-small.show-sidebar #wrapper {
-    margin-left: 380px
+    margin-left: 180px
 }
 a {
     cursor: pointer;
@@ -4063,7 +4062,7 @@ body.light-skin.fixed-footer .footer {
 }
 
 .video {
-    margin-top: 60px;
+    margin-top: 50px;
     -webkit-box-shadow: 0px 0px 20px 0px rgba(0,0,0,0.37);
     -moz-box-shadow: 0px 0px 20px 0px rgba(0,0,0,0.37);
     box-shadow: 0px 0px 20px 0px rgba(0,0,0,0.37);
