--- a/styles/style.css
+++ b/styles/style.css
@@ -380,7 +380,29 @@
     text-align: center;
     background: #fff
 }
+.vertical-timeline-icon-bottom {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    font-size: 16px;
+    border: 1px solid #eaeaea;
+    text-align: center;
+    background: #fff
+}
 .vertical-timeline-icon i {
+    display: block;
+    width: 24px;
+    height: 24px;
+    position: relative;
+    left: 50%;
+    top: 50%;
+    margin-left: -12px;
+    margin-top: -9px
+}
+.vertical-timeline-icon-bottom i {
     display: block;
     width: 24px;
     height: 24px;
@@ -1418,9 +1440,8 @@ h6 {
     margin: 5px 0
 }
 .stats-title h4 {
-    text-transform: uppercase;
-    font-size: 12px;
-    font-weight: 600
+    font-size: 18px;
+    font-weight: 100
 }
 .stats-box div {
     display: inline-block;
